# DEGF

./: .gitignore  AGENTS.md
Client/DEGFDemo/: .gitattributes
Client/DEGFDemo/ProjectSettings/: ProjectSettings.asset
Client/Demo/: .gitignore
Client/Demo/Assets/DEFramework/Scripts/DE.Client.Foundation/: DE.Client.Foundation.asmdef
Client/Demo/Assets/DEFramework/Scripts/DE.Share/: EntityPropertyAttribute.cs  MessageDef.cs
Client/Demo/Assets/DEFramework/Scripts/DE.Share.Foundation/: DE.Share.Foundation.asmdef  FixedPoint.cs
Client/Demo/Assets/Demo/Scripts/Demo.Client/: Demo.Client.asmdef
Client/Demo/Assets/Scenes/: Runtime.unity
Client/Demo/Assets/Scripts/DE.Client/: AvatarEntitiy.cs  ClientEntity.cs  De.Client.asmdef  NewBehaviourScript.cs
Client/Demo/Assets/Scripts/DE.Share/: DE.Share.asmdef  Entity.cs
Client/Demo/Assets/Scripts/Demo.Client/: Demo.Client.asmdef
Client/Demo/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Docs/: RpcDesign.md
Server/Config/: local-dev.json
Server/Engine/: .gitignore  CMakeLists.txt  build.bat  build_engine.bat  build_test.bat
Server/Engine/3rd/: CMakeLists.txt  README.md
Server/Engine/3rd/AZMQ/: BuildAZMQ.bat
Server/Engine/3rd/Boost/: main.py
Server/Engine/cmake/: SetupBoostLibrary.cmake
Server/Engine/config/: local-dev.json
Server/Engine/src/: CMakeLists.txt  engine_core.cpp  main.cpp
Server/Engine/src/config/: ClusterConfig.cpp  ClusterConfig.h
Server/Engine/src/core/: BoostAsio.h  Logger.cpp  Logger.h  ProcessPerformance.cpp  ProcessPerformance.h
Server/Engine/src/engine/: CMakeLists.txt  engine_core.h  main.cpp
Server/Engine/src/engine/config/: ClusterConfig.cpp  ClusterConfig.h
Server/Engine/src/engine/core/: Logger.cpp
Server/Engine/src/engine/server/: GMServer.cpp  GMServer.h  GameServer.cpp  GameServer.h  GateServer.cpp  GateServer.h  ServerBase.cpp  ServerBase.h
Server/Engine/src/http/: HttpService.cpp  HttpService.h
Server/Engine/src/managed/: ManagedRuntimeBridge.h  ManagedRuntimeService.cpp  ManagedRuntimeService.h
Server/Engine/src/network/client/: ClientNetwork.cpp  ClientNetwork.h  ClientNetworkSession.cpp  ClientNetworkSession.h
Server/Engine/src/network/inner/: InnerNetwork.cpp  InnerNetwork.h  InnerNetworkSession.cpp  InnerNetworkSession.h  InnerNetworkWorker.cpp  InnerNetworkWorker.h
Server/Engine/src/network/protocal/: Header.cpp  Header.h  Message.cpp  Message.h  MessageID.h
Server/Engine/src/server/: GMServer.cpp  GMServer.h  GameServer.cpp  GameServer.h  GateServer.cpp  GateServer.h  ServerBase.cpp  ServerBase.h
Server/Engine/src/server/game/: GameServer.cpp  GameServer.h
Server/Engine/src/server/gate/: GateAuthValidationResult.h  GateHttpHandler.cpp  GateHttpHandler.h  GateServer.cpp  GateServer.h
Server/Engine/src/server/gm/: GMHttpHandler.cpp  GMHttpHandler.h  GMServer.cpp  GMServer.h
Server/Engine/src/telnet/: TelnetService.cpp  TelnetService.h
Server/Engine/src/tests/: CMakeLists.txt  engine_smoke_tests.cpp
Server/Engine/src/timer/: TimerManager.cpp  TimerManager.h
Server/Engine/tests/: CMakeLists.txt  engine_smoke_tests.cpp
Server/Framework/: .gitignore  Framework.sln  build_framework.bat
Server/Framework/DE.Server/: DE.Server.csproj
Server/Framework/DE.Server.Foundation/: DE.Server.Foundation.csproj
Server/Framework/DE.Server/Auth/: AccountCollection.cs  AccountDocument.cs  GateAuthValidator.cs
Server/Framework/DE.Server/Database/: DatabaseConfig.cs  DatabaseConfigLoader.cs  DatabaseService.cs  MongoCollection.cs  MongoRepository.cs
Server/Framework/DE.Server/Entities/: Avatar.cs  Npc.cs  ServerEntity.cs  ServerStubEntity.cs  ServerStubTypeCollector.cs  Space.cs
Server/Framework/DE.Server/Entities/Stubs/: LoginStub.cs  MatchStub.cs  OnlineStub.cs  SpaceStub.cs
Server/Framework/DE.Server/NativeBridge/: ManagedAPI.cs  ManagedRuntimeState.cs  NativeAPI.cs
Server/Framework/DE.Server/NativeBridge/API/: AvatarRpcRuntime.cs  DELogger.cs  DEThreadDispatcher.cs  DETimer.cs  ManagedAPI.cs  NativeAPI.cs  RpcCaller.cs  ServerRpcRuntime.cs  TelnetCSharpExecutor.cs
Server/Framework/DE.Server/NativeBridge/State/: AvatarAccount.cs  GameServerRuntimeState.cs  GateServerRuntimeState.cs  GmCommandRuntimeState.cs  ManagedClusterConfig.cs  ManagedRuntimeState.cs  ServerStubDistributeTable.cs
Server/Framework/DE.Server/Stubs/: MatchStub.cs  OnlineStub.cs  SpaceStub.cs
Server/Framework/DE.Share/: DE.Share.csproj
Server/Framework/DE.Share.EntityPropertySG/: DE.Share.EntityPropertySG.csproj  EntityPropertyGenerator.cs
Server/Framework/DE.Share.Foundation/: DE.Share.Foundation.csproj
Server/Framework/DE.Share.Tests/: DE.Share.Tests.csproj  EntitySerializerTests.cs
Server/Framework/Demo.Server/: Avatar.cs  Class1.cs  Demo.Server.csproj  DemoAvatarEntity.cs  DemoNpcEntity.cs  DemoSpaceEntity.cs  Npc.cs  Space.cs
Server/Framework/Demo.Server/DemoAvatarEntity/: BasicInfoComponent.cs  DemoAvatarEntity.cs
Server/Scripts/: kill_server_cluster.bat  kill_server_cluster.py  start_server_cluster.bat  start_server_cluster.py
(+54 files in other folders)
